# DatasetCapture

./: AGENTS.md  LICENSE  README.md  TODO.md  app.py  config.json  detection_worker.py  hand_detector.py  main.py  protocol.py  pyproject.toml  requirements.txt  review_window.py  serial_handler.py  utils.py
.opencode/plans/: todo.md
dataset_capture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.md  architecture.md  configuration.md  gui-reference.md  image-capture.md  protocol.md  serial-handler.md
